# http_downloader

./: .gitignore  README.md  app.py  pyproject.toml
docs/superpowers/specs/: 2026-07-10-http-downloader-design.md
engine/: __init__.py  downloader.py  queue.py  resume.py  verify.py
tests/: test_downloader.py  test_resume.py  test_server.py  test_verify.py
